# testcontainers-on-whales

./: .copier-answers.yml  .envrc  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  shell.nix
.github/workflows/: ci.yaml  release.yaml
docs/: conf.py  index.md
testcontainers_on_whales/: __init__.py  container.py  eventstoredb.py  minio.py  nginx.py  postgres.py  rabbitmq.py  redis.py
testcontainers_on_whales/core/: container.py  exceptions.py
tests/: test_container.py  test_eventstoredb.py  test_import.py  test_minio.py  test_minio_rabbitmq.py  test_nginx.py  test_package.py  test_postgres.py  test_rabbitmq.py  test_redis.py
