[project]
license = {text = "MIT"}
authors = [
    {name = "betaboon", email = "betaboon@0x80.ninja"},
]
name = "testcontainers-on-whales"
description = "A library that provides lightweight, throwaway instances of common databases, Selenium web browsers, or anything else that can run in a container."
readme = "README.md"
keywords = ["testing", "containers", "podman", "docker", "test automation"]
classifiers = [
    "Topic :: Software Development :: Build Tools",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dynamic = ["version"]
requires-python = ">=3.9"
dependencies = [
    "python-on-whales>=0.59.0",
    "requests>=2.28.2",
]

[project.urls]
repository = "https://github.com/betaboon/testcontainers-on-whales"
changelog = "https://github.com/betaboon/testcontainers-on-whales/releases"

[project.optional-dependencies]
rabbitmq = [
    "pika>=1.3.1",
]
redis = [
    "redis>=4.5.1",
]
postgres = [
    "psycopg2-binary>=2.9.5",
    "sqlalchemy>=2.0.6",
]
minio = [
    "boto3>=1.26.91",
]
eventstoredb = [
    "eventstoredb>=0.7.0",
]
[tool.pdm.dev-dependencies]
dev = [
    "pre-commit>=3.1.1",
    "gitlint>=0.19.1",
    "python-semantic-release>=7.33.2",
    "types-requests>=2.28.11.15",
]
test = [
    "pytest>=7.2.2",
    "pytest-asyncio>=0.20.3",
]

[tool.pdm.scripts]
install-git-hooks = "pre-commit install --install-hooks"
lint = "pre-commit run --all-files"
test = "pytest"

[tool.pdm.scripts.ci-lint]
cmd = [
  "pre-commit", "run",
  "--show-diff-on-failure",
  "--from-ref", "$FROM_REF",
  "--to-ref", "$TO_REF",
]

[tool.pdm.scripts.ci-commit-lint]
cmd = [
  "gitlint",
  "--contrib", "contrib-title-conventional-commits",
  "--ignore", "body-is-missing",
  "--commits", "$FROM_REF..$TO_REF",
]

[tool.pdm.scripts.ci-version]
cmd = "semantic-release print-version --next"

[tool.pdm.scripts.ci-changelog]
cmd = "semantic-release changelog --unreleased"

[tool.pdm.version]
source = "scm"
write_to = "testcontainers_on_whales/__version__.py"
write_template = "__version__ = '{}'"

[tool.semantic_release]
branch = "main"
version_source = "tag_only"
version_pattern = "d+.d+.d+"
tag_format = "{version}"

[tool.black]
line-length = 88

[tool.flake8]
# Recommend matching the black line length (default 88),
# rather than using the flake8 default of 79:
max-line-length = 88
extend-ignore = [
    # See https://github.com/PyCQA/pycodestyle/issues/373
    "E203",
]
per-file-ignores = [
  # imported but unused
  "__init__.py:F401",
  # comparison to True should be 'if cond is True:' or 'if cond:'
  "tests/*:E712",
]
exclude = [
  "__pypackages__",
  "build",
  "dist",
]

[tool.isort]
profile = "black"
atomic = true
filter_files = true

[tool.pytest.ini_options]
addopts = "-ra --ignore=__pypackages__"

[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"
